plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id "org.springdoc.openapi-gradle-plugin" version "1.9.0"
}

group = 'com.cnu.teamProj'
version = '0.0.1-SNAPSHOT'


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	/*maven {
		url "https://plugins.gradle.org/m2/"
	}*/
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	//implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'commons-io:commons-io:2.14.0'
	//implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
	implementation 'org.springframework.security:spring-security-core'
	implementation 'org.springframework.security:spring-security-config'
	implementation 'org.springframework.security:spring-security-web'

	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	//스웨거
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	//aws s3
	//스타터 (스프링 애플리케이션에서 모듈을 사용하는데 필요한 종속성이 포함되어 있다)
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
	//자바에서 amazon s3 버킷에 접근할 수 있게 해주는 라이브러리
	implementation 'software.amazon.awssdk:s3:2.25.64'
	implementation 'software.amazon.awssdk.crt:aws-crt:0.31.3'
	implementation 'software.amazon.awssdk:core:2.20.0'

	runtimeOnly 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
